--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -10,7 +10,7 @@ on:
     branches: ["main"]
     
   schedule:
-    - cron:  '30 5,17 * * *'
+    - cron:  '0 * * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
